// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TermToggleGroupFilter render - active 1`] = `
Array [
  <OuiFilterButton
    aria-pressed={true}
    hasActiveFilters={true}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    Kibana
  </OuiFilterButton>,
  <OuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Elasticsearch
  </OuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated - custom negated name 1`] = `
Array [
  <OuiFilterButton
    aria-pressed={true}
    hasActiveFilters={true}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    -Kibana
  </OuiFilterButton>,
  <OuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Elasticsearch
  </OuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render - active negated 1`] = `
Array [
  <OuiFilterButton
    aria-pressed={true}
    hasActiveFilters={true}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    Not Kibana
  </OuiFilterButton>,
  <OuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Elasticsearch
  </OuiFilterButton>,
]
`;

exports[`TermToggleGroupFilter render 1`] = `
Array [
  <OuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_0"
    noDivider={true}
    onClick={[Function]}
    withNext={true}
  >
    Kibana
  </OuiFilterButton>,
  <OuiFilterButton
    aria-pressed={false}
    hasActiveFilters={false}
    key="field_value_toggle_filter_item_1"
    noDivider={false}
    onClick={[Function]}
    withNext={false}
  >
    Elasticsearch
  </OuiFilterButton>,
]
`;
